@@ -253,5 +253,3 @@ foreach my $help_arg (@main_args) {
 @output = `/usr/local/pf/bin/pfcmd version`;
 like ( $output[0], qr/^PacketFence trunk/,
        "pfcmd version is correct" );
-like ( $output[1], qr/^DB MD5SUM: a3ad9f52b7d31c8d4b5e9b0c2c3dd559/,
-       "DB MD5SUM" );
