@@ -36,7 +36,7 @@ Enhancements
 - Removed unnecessary database connections and duplicated code
 - Added several tests
 - 802.1X improvements (#995, #1002)
-- General codebase improvements, refactoring (#914, #977, #1001)
+- General codebase improvements, refactoring (#914, #977, #1001, #973)
 
 Special thanks to University of Oregon who, from early on, were running the 
 bleeding edge and provided invaluable feedback and contributions!
